# how-to-cli

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  background.py  cache.py  config.py  constants.py  dev_setup.py  exceptions.py  executor.py  history.py  how-to-cli.rb  how.py  install.sh  interactive.py  interactive_helper.py  logger.py  model_selector.py  openrouter_client.py  parameters.py  pyproject.toml  requirements.txt  security.py  session.py  shell_history.py  streaming.py  test_requirements.txt
completions/: how_completion.bash  how_completion.fish  how_completion.zsh
tests/: __init__.py  conftest.py  test_config.py  test_executor.py  test_openrouter_client.py
